--- a/globalstatic/css/front_page.css
+++ b/globalstatic/css/front_page.css
@@ -36,3 +36,31 @@
 	height: 200px;
 	position: relative;
 }
+
+#new-projects-header, #completed-projects-header {
+	text-align: left;
+	margin-left: 3px;
+	margin-bottom: 15px;
+}
+#new-projects-header {
+	margin-top: 30px;
+}
+
+#stories-header {
+	margin-top: 30px;
+	text-align: left;
+	margin-left: 10px;
+}
+
+#more-volunteers, #find-volunteers {
+	margin-left: 3px;
+	margin-top: -10px;
+}
+
+#front-page-carousel {
+	border: 1px solid #DDDDDD;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
