--- a/templates/stories.html
+++ b/templates/stories.html
@@ -2,6 +2,7 @@
 {% if not latest_stories %}
 	No stories to show
 {% else %}
+	<h4 id="stories-header">Stories About Past Projects</h4>
 	{% for story in latest_stories %}
 		<div class="story">
 			<h5 class="front-page-header">{{ story.title }}</h5>
