--- a/projects/templates/project_form_fields.html
+++ b/projects/templates/project_form_fields.html
@@ -109,9 +109,9 @@
 </div>
 
 <div class="control-group">
-    {% if form.logo.errors %}
+    {% if form.image.errors %}
     <div class="errors controls"> 
-        {{ form.logo.errors }} 
+        {{ form.image.errors }} 
     </div> 
     {% endif %}
     <label {% if form.image.errors %} class="control-label errors" {% else %} class="control-label" {% endif %}
