--- a/templates/mobile/index.html
+++ b/templates/mobile/index.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 	<div class="row">
-		<div class="main-content" id="front-page-main">
-		{% include 'carousel.html' %}	
-		{% include 'thumbs.html' %}
+		<div class="main-content span8" id="front-page-main">
+		{% include 'completed_projects.html' %}	
+		{% include 'new_projects.html' %}
 		<div id="front_page_stories">
 			{% include 'stories.html' %}
 		</div>
