--- a/users/templates/accounts_sidebar.html
+++ b/users/templates/accounts_sidebar.html
@@ -7,5 +7,5 @@
     <a href="{% url 'my-help-offers' pk=user.id %}" class="btn btn-primary link-button-accounts">My Help Offers</a><br>
     <a href="{% url 'my-notifications' pk=user.id %}" class="btn btn-primary link-button-accounts">My Notifications</a>
     <button onclick="deactivate('{% url 'deactivate-account' %}', 
-    '{% url 'login' %}', '{% url 'logout' %}')" class="btn btn-primary link-button-accounts">Deactivate Account</a>
+    '{% url 'login' %}', '{% url 'logout' %}')" id="deactivate-button" class="btn btn-primary link-button-accounts">Deactivate Account</a>
 
