--- a/globalstatic/mobile_css/m_sidebar.css
+++ b/globalstatic/mobile_css/m_sidebar.css
@@ -9,8 +9,14 @@
 
 #sidr {
 	z-index: 999;
-	background-color: gray;
+	background-color: rgba(0,0,0,0.9);
+	opacity: 0.97;
 	width: 50%;
 	left: -5000px;
+}
+
+#my-menu-toggle {
+	margin-top: 10px;
+	margin-bottom: 15px;
 }
 
