--- a/globalstatic/mobile_css/m_styles.css
+++ b/globalstatic/mobile_css/m_styles.css
@@ -1,11 +1,17 @@
 .mobile-wrapper {
 	position:absolute;
+	width: 100%;
+	margin: 0px;
 	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 0;
-	/*overflow: hidden;*/
+	min-height: -webkit-calc(100% - 90px);
+    min-height: -moz-calc(100% - 90px);
+	/*min-height: 100%;*/
+	min-height: calc(100% - 90px);
 }
+	/*overflow: hidden;*/
 
 .hidden {
   display: none;
@@ -13,21 +19,29 @@
 
 .main-forms {
 	margin-top: 20px;
+	margin-left: 15%;
 }
 
-.main-forms {
-	margin-top: 20px;
+#mobile-feedback-form-wrapper {
+	margin-left: 15%;
 }
 
 .main-content {
 	margin-top: 20px;
-	position: absolute;
 	top: 0;
+	margin-left: 10px;
+	margin-right: 10px;
 	/*overflow: scroll;*/
 }
 
+.container {
+	margin-right: 0px;
+	margin-left: 0px;
+}
+
 #sidr {
-	position: relative;
+	position: absolute;
+	top: 0;
 }
 
 /*#my-wrapper > #body-wrapper {
@@ -41,10 +55,10 @@
 }*/
 
 #my-wrapper, #my-wrapper > #body-wrapper {
-	min-height: -webkit-calc(100% - 115px);
-    min-height: -moz-calc(100% - 115px);
+	min-height: -webkit-calc(100% - 90px);
+    min-height: -moz-calc(100% - 90px);
 	/*min-height: 100%;*/
-	min-height: calc(100% - 115px);
+	min-height: calc(100% - 90px);
 }
 
 #my-wrapper {
@@ -52,7 +66,7 @@
 	width: 100%;
 	padding-top: 0px;
 	margin-left: 0px;
-	overflow: scroll;
+	/*overflow: scroll;*/
 	position: relative;
   	z-index: 4;
 }
@@ -130,6 +144,7 @@
 	font-size: 10px;
   	margin: 50px 15px 0px;
 	width:calc(100% - 30px);
+	color: white;
 }
 
 .mapquest-image-wrapper {
@@ -158,4 +173,9 @@
 #footer-wrapper, #my-footer {
 	background-color: #3B3B3B;
 	bottom: 0;
+	width: 100%;
+}
+
+.link-button-accounts {
+	font-size: 12px;
 }
