--- a/templates/mobile/base_accounts.html
+++ b/templates/mobile/base_accounts.html
@@ -3,7 +3,7 @@
 
 {% block extrahead_level2 %}
 <link href="{% static "users/css/forms.css" %}" rel="stylesheet">
-<link href="{% static "users/css/my_account.css" %}" rel="stylesheet">
+<link href="{% static "users/mobile_css/m_my_account.css" %}" rel="stylesheet">
 <script src="{% static "global/mychosen/public/chosen.jquery.js" %}"></script>
 {% endblock extrahead_level2 %}
 
