--- a/templates/mobile/base_head.html
+++ b/templates/mobile/base_head.html
@@ -6,6 +6,7 @@
 <link href="{% static "global/bootstrap/css/bootstrap.min.css" %}"          rel="stylesheet" />
 <link href="{% static "global/bootstrap/css/bootstrap-res-nav.min.css" %}"  rel="stylesheet" />
 <link href="{% static "global/mychosen/public/chosen.min.css" %}"     		rel="stylesheet">
+{# <link href="{% static "global/css/styles.css" %}"                           rel="stylesheet" /> #}
 <link href="{% static "global/mobile_css/m_styles.css" %}"                           rel="stylesheet" />
 <link href="{% static "global/css/form_styles.css" %}"                      rel="stylesheet" />
 <link href="{% static "global/css/search_results.css" %}"                      rel="stylesheet" />
