approaching final version

--- a/projects/templates/mobile/create_new_project.html
+++ b/projects/templates/mobile/create_new_project.html
@@ -44,5 +44,6 @@
 {# <div id='charity-data-url' rel="{% url 'charity-data' %}"></div> #}
 <script src="{% static "users/js/text_to_dark.js" %}"></script>
 <script src="{% static "projects/js/volunteers.js" %}"></script> 
+<script src="{% static "users/js/coordinates.js" %}"></script>             
 
 {% endblock accounts_content %}
